# pitt-biosc1540-2024f

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE_INFO.md  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
biosc1540/: blank.ipynb  students.md  team.md
biosc1540/.overrides/: main.html
biosc1540/files/: grade-scale.csv
biosc1540/lectures/: .pages
biosc1540/lectures/01/: index.md
biosc1540/lectures/02/: index.md
biosc1540/lectures/03/: index.md
biosc1540/lectures/04/: .pages  index.md
biosc1540/lectures/05/: index.md
biosc1540/lectures/06/: .pages  index.md
biosc1540/lectures/07/: index.md
biosc1540/lectures/08/: index.md
biosc1540/lectures/09/: index.md
biosc1540/lectures/10/: .pages  index.md
biosc1540/lectures/11/: index.md
biosc1540/lectures/12/: index.md
biosc1540/lectures/13/: .pages  index.md
biosc1540/lectures/14/: index.md
biosc1540/lectures/15/: index.md
biosc1540/lectures/16/: .pages
biosc1540/lectures/17/: index.md
biosc1540/lectures/18/: .pages  index.md
biosc1540/lectures/19/: index.md
biosc1540/lectures/20/: .pages  index.md
biosc1540/lectures/21/: .pages  index.md
biosc1540/lectures/22/: index.md
biosc1540/lectures/23/: index.md
biosc1540/lectures/24/: index.md
biosc1540/lectures/25/: .pages  index.md
biosc1540/lectures/26/: index.md
biosc1540/lectures/bioinformatics/: index.md
biosc1540/lectures/csb/: index.md
biosc1540/lectures/special/: index.md
biosc1540/modules/: .pages
biosc1540/modules/intro/: .pages
biosc1540/modules/prelims/: .pages
biosc1540/modules/sequence-analysis/: index.md
biosc1540/syllabus/: .pages  attendance.md  cadences.md  grading.md  index.md  outcomes.md  philosophy.md  schedule.md
content/: .pages  programming+.md  students.md  team.md
content/.overrides/: main.html
content/assessments/: .pages  index.md
content/assessments/assignments/: index.md
content/assessments/assignments/01/: index.md
content/assessments/assignments/02/: .pages  index.md
content/assessments/assignments/03/: .pages  index.md
content/assessments/assignments/04/: .pages  index.md
content/assessments/assignments/05/: .pages  index.md
content/assessments/assignments/06/: .pages  index.md
content/assessments/assignments/07/: .pages  index.md
content/assessments/assignments/08/: .pages  index.md
content/assessments/exams/: .pages  bioinformatics.md  csb.md  index.md
content/assessments/exams/bioinformatics/: .pages  index.md
content/assessments/exams/csb/: .pages  index.md
content/assessments/exams/final/: .pages  index.md
content/assessments/project/: .pages  index.md
content/assessments/project/docking/: active.smiles  index.md
content/assessments/project/genome/: index.md
content/assessments/project/protein/: index.md
content/lectures/: .pages  index.md
content/lectures/01/: .pages  index.md
content/lectures/02/: .pages  index.md
content/lectures/03/: .pages  index.md
content/lectures/03/activities/: .pages  quality.md
content/lectures/03/activities/quality/: .pages  fastqc.md  fastqc_forward_initial.html  fastqc_reverse_initial.html  index.md
content/lectures/04/: .pages  index.md
content/lectures/05/: .pages  index.md
content/lectures/06/: .pages  index.md
content/lectures/07/: .pages  index.md
content/lectures/08/: .pages  index.md
content/lectures/09/: .pages  index.md
content/lectures/10/: .pages  index.md
content/lectures/11/: .pages  index.md
content/lectures/12/: .pages  index.md
content/lectures/13/: .pages  index.md
content/lectures/14/: .pages  index.md
content/lectures/15/: .pages  index.md
content/lectures/16/: .pages  index.md
content/lectures/17/: .pages  index.md
content/lectures/18/: .pages  index.md
content/lectures/19/: .pages  index.md  l19-worksheet.ipynb
content/lectures/20/: .pages  index.md  l20-instructor.ipynb  l20-worksheet.ipynb  metabric-gene-expression.npy  metabric-gene-expression.xlsx  metabric-gene-names.npy
content/lectures/21/: .pages  index.md  predictive-modeling-pka-instructor.ipynb  predictive-modeling-pka.ipynb  smiles-pka-desc.csv
content/lectures/22/: .pages  index.md
content/lectures/23/: .pages  index.md
content/lectures/24/: .pages  index.md
content/lectures/25/: index.md
content/lectures/26/: .pages
content/lectures/bioinformatics/: index.md
content/lectures/csb/: index.md
content/lectures/python/: index.md
content/modules/: .pages
content/modules/sequencing/: index.md
content/syllabus/: attendance.md  grading.md  index.md  philosophy.md  policies.md  schedule.md
