[tool.pixi.project]
name = "pitt-biosc1540-2024f"
version = "2024.10.26"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
channels = ["conda-forge"]
platforms = ["linux-64"]
description = ""
authors = [
    "OASCI <us@oasci.org>",
]

[tool.pixi.environments]
dev = ["dev"]
sci = ["sci"]

[tool.pixi.tasks]
mdlint = { cmd = ["markdownlint-cli2", '"**/*.{md,markdown}"', "--fix", "--config", ".markdownlint.yaml", "||", "true"] }
isort = { cmd = ["isort", "--settings-path", "pyproject.toml", "./content"] }
black = { cmd = ["black", "--config", "pyproject.toml", "./content"] }
format = { depends-on = ["mdlint", "isort", "black"] }
docs = { cmd = ["rm", "-rf", "./public/", "&&", "mkdocs", "build", "-d", "public/"] }
serve = { cmd = ["mkdocs", "serve"] }

[tool.pixi.dependencies]
python = ">=3.13.0,<4"
mkdocs = ">=1.6.1,<2"
mkdocs-material = ">=9.5.42,<10"
jupyterlab = ">=4.2.5,<5"
pymdown-extensions = ">=10.11.2,<11"
mkdocs-table-reader-plugin = ">=3.1.0,<4"
mkdocstrings = ">=0.26.2,<0.27"
mkdocstrings-python = ">=1.12.2,<2"
mkdocs-macros-plugin = ">=1.3.7,<2"
mkdocs-jupyter = ">=0.25.0,<0.26"
mkdocs-glightbox = ">=0.4.0,<0.5"
gradescope-utils = ">=0.5.0,<0.6"
mkdocs-git-revision-date-localized-plugin = ">=1.2.9,<2"

[tool.pixi.pypi-dependencies]
material-plausible-plugin = ">=0.2.0,<0.3"
mkdocs-awesome-pages-plugin = ">=2.9.3,<3"
mkdocs-print-site-plugin = ">=2.6.0,<3"

[tool.pixi.feature.dev.dependencies]
black = ">=24.10.0,<25"
isort = ">=5.13.2,<6"
ruff = ">=0.7.1,<0.8"
bump-my-version = ">=0.27.0,<0.28"

[tool.pixi.feature.sci.dependencies]
matplotlib = ">=3.9.2,<4"
numpy = ">=2.1.2,<3"
seaborn = ">=0.13.2,<0.14"
scikit-learn = ">=1.5.2,<2"
openpyxl = ">=3.1.5,<4"
beautifulsoup4 = ">=4.12.3,<5"
pandas = ">=2.2.3,<3"
scipy = ">=1.14.1,<2"

[tool.bumpversion]
current_version = "2024.10.26"
tag = true
commit = true

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.pylint.messages_control]
good-names = [
    "i",
    "j",
    "e",
    "ex",
]
ignore = [
    "CVS",
    "_version.py",
    "conf.py",
]

[tool.black]
target-version = [
    "py312",
]
line-length = 88
color = true
exclude = "/(\n    \\.git\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n    | env\n    | venv\n)/\n"

[tool.isort]
py_version = 312
line_length = 88
known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"
